--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		body {font-family: Verdana,sans-serif;}
 		.button {
 		    border: none;
-		    color: grey;
+		    color: blue;
 		    padding: 14px 28px;
 		    font-size: 16px;
 		    cursor: pointer;
